Corrects invisibility in text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -841,7 +841,7 @@ body {
     .modal .card__terms.container .near__invisible-container.container {
       padding: 0;
       width: 85vw;
-      bottom: 33vh; }
+      bottom: 30vh; }
     .modal .card__terms.container .near__invisible-bg {
       height: 35px; }
     .modal .card__terms.container .card__footer {
