--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -100,7 +100,7 @@
                 &-container.container {
                     padding: 0;
                     width: 85vw;
-                    bottom: 33vh;
+                    bottom: 30vh;
                 }
 
                 &-bg {
